--- a/cart.html
+++ b/cart.html
@@ -204,48 +204,48 @@
     </div>
   </div>
   <script type="text/x-template" id="userProductModal">
-<div class="modal fade" id="productModal" tabindex="-1" role="dialog"
-     aria-labelledby="exampleModalLabel" aria-hidden="true" ref="modal">
-  <div class="modal-dialog modal-xl" role="document">
-    <div class="modal-content border-0">
-      <div class="modal-header bg-dark text-white">
-        <h5 class="modal-title" id="exampleModalLabel">
-          <span>{{ tempProdut.title }}</span>
-      </h5>
-        <button type="button" class="btn-close"
-                data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-sm-6">
-            <img class="img-fluid" alt="" :src="tempProdut.imageUrl">
-      </div>
-          <div class="col-sm-6">
-            <span class="badge bg-primary rounded-pill"></span>
-            <p>商品描述：{{ tempProdut.description }}</p>
-            <p>商品內容：{{ tempProdut.content }}</p>
-            <div class="h5" v-if="tempProdut.price === tempProdut.origin_price">{{ tempProdut.price }} 元</div>
-            <div v-else>
-              <del class="h6">原價 {{ tempProdut.origin_price }} 元</del>
-              <div class="h5">現在只要 {{ tempProdut.price }} 元</div>
+  <div class="modal fade" id="productModal" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalLabel" aria-hidden="true" ref="modal">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content border-0">
+        <div class="modal-header bg-dark text-white">
+          <h5 class="modal-title" id="exampleModalLabel">
+            <span>{{ tempProdut.title }}</span>
+          </h5>
+          <button type="button" class="btn-close"
+                  data-bs-dismiss="modal" aria-label="Close">
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-sm-6">
+              <img class="img-fluid" alt="" :src="tempProdut.imageUrl">
             </div>
-            <div>
+            <div class="col-sm-6">
+              <span class="badge bg-primary rounded-pill"></span>
+              <p>商品描述：{{ tempProdut.description }}</p>
+              <p>商品內容：{{ tempProdut.content }}</p>
+              <div class="h5" v-if="tempProdut.price === tempProdut.origin_price">{{ tempProdut.price }} 元</div>
+              <div v-else>
+                <del class="h6">原價 {{ tempProdut.origin_price }} 元</del>
+                <div class="h5">現在只要 {{ tempProdut.price }} 元</div>
+              </div>
+              <div>
               <div class="input-group">
                 <!-- 用選的防止用戶亂輸入 -->
                 <select name="" id="" class="form-select" v-model="qty">
                   <option :value="i" v-for="i in 10" :key="`${i}1561`">{{ i }}</option>
                 </select>
                 <button type="button" class="btn btn-primary" @click="addToCart(tempProdut.id, qty)">加入購物車</button>
-      </div>
-      </div>
-      </div>
+              </div>
+            </div>
+          </div>
           <!-- col-sm-6 end -->
+        </div>
       </div>
-      </div>
-      </div>
-      </div>
-      </div>
-    </script>
+    </div>
+  </div>
+  </script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
     integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
