--- a/cart.html
+++ b/cart.html
@@ -52,12 +52,20 @@
               </td>
               <td>
                 <div class="btn-group btn-group-sm">
-                  <button type="button" class="btn btn-outline-secondary" @click="openModal(product.id)">
+                  <button 
+                    type="button" 
+                    class="btn btn-outline-secondary" 
+                    :disabled="product.id === loadingItem"
+                    @click="openModal(product.id)">
                     <i class="fas fa-spinner fa-pulse"
                       v-if="product.id === loadingItem"></i>
                     查看更多
                   </button>
-                  <button type="button" class="btn btn-outline-danger" @click="addToCart(product.id)">
+                  <button 
+                    type="button" 
+                    class="btn btn-outline-danger" 
+                    :disabled="product.id === loadingItem" 
+                    @click="addToCart(product.id)">
                     <i class="fas fa-spinner fa-pulse"
                       v-if="product.id === loadingItem"></i>
                     加到購物車
@@ -86,7 +94,8 @@
               <tr v-for="item in cart.carts" :key="item.id">
                 <td>
                   <!-- 刪除時不能重複刪除 -->
-                  <button type="button" class="btn btn-outline-danger btn-sm"
+                  <button type="button" 
+                    class="btn btn-outline-danger btn-sm"
                     :disabled="item.id === loadingItem"
                     @click="deleteCart(item)">
                     <i class="fas fa-spinner fa-pulse"
@@ -104,7 +113,9 @@
                   <div class="input-group input-group-sm">
                     <div class="input-group mb-3">
                       <!-- 更新時不能更改數量 -->
-                      <select name="" id="" class="form-control" v-model="item.qty"
+                      <select name="" id="" 
+                        class="form-control" 
+                        v-model="item.qty"
                         :disabled="item.id === loadingItem"
                         @change="updateCart(item)">
                         <option :value="i" v-for="i in 20" :key="`${i}165146`">{{ i }}</option>
